<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context=".fragments.RegisterFragment">

    <TextView
        android:id="@+id/register_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/allerta"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_arrow_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="@drawable/username_bg"
        android:fontFamily="@font/allerta"
        android:hint="@string/username"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@color/smooth_white"
        android:fontFamily="@font/allerta"
        android:hint="@string/email"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@drawable/password_bg"
        android:fontFamily="@font/allerta"
        android:hint="@string/password"
        android:padding="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:drawableEnd="@drawable/ic_arrow_circle_right"
        android:fontFamily="@font/allerta"
        android:padding="4dp"
        android:paddingStart="52dp"
        android:text="@string/next"
        android:textAllCaps="true"
        android:textColor="@color/green"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/owl_iv"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:padding="20dp"
        android:src="@drawable/owl" />

    <TextView
        android:id="@+id/trivia_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/allerta"
        android:text="@string/trivia"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold" />

</LinearLayout>