<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <ImageView
        android:layout_width="900dp"
        android:layout_height="520dp"
        android:background="@drawable/triangle"
        android:backgroundTint="@color/green"
        android:rotation="180"
        app:layout_constraintBottom_toTopOf="@id/facebook_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/register_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/allerta"
        android:minHeight="?attr/actionBarSize"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/owl_iv"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="40dp"
        android:padding="20dp"
        android:src="@drawable/owl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_tv" />

    <TextView
        android:id="@+id/trivia_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/allerta"
        android:text="@string/trivia"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/owl_iv" />

    <ImageButton
        android:id="@+id/arrow_down_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/white_circle"
        android:padding="8dp"
        android:src="@drawable/ic_arrow_down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/trivia_tv" />

    <TextView
        android:id="@+id/facebook_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/stroke_bg"
        android:fontFamily="@font/allerta"
        android:padding="12dp"
        android:text="@string/log_in_with_facebook"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:drawableStartCompat="@drawable/ic_facebook"
        app:layout_constraintTop_toBottomOf="@id/arrow_down_btn" />

    <TextView
        android:id="@+id/or_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/allerta"
        android:hint="@string/or"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/facebook_btn" />

    <TextView
        android:id="@+id/up_with_email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/allerta"
        android:text="@string/up_with_email"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/or_hint" />

    <Button
        android:id="@+id/game_now_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/sky_blue"
        android:fontFamily="@font/allerta"
        android:padding="4dp"
        android:text="@string/game_now"
        android:textAllCaps="true"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/up_with_email_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>